# svgraph

./: CHANGELOG.md  MIGRATION.md  README.md  RELEASE.md  deps.edn  package-lock.json  package.json  pyproject.toml
.cpcache/: 2524501123.basis  2524501123.cp  3159462555.basis  3159462555.cp  4246712940.basis  4246712940.cp  4246712940.manifest
.github/workflows/: ci.yml  npm-publish.yml  pages.yml
docs/: app.js  index.html  maturity.md  pptxsvg-web-editor.md  svgraph-web-editor.md
docs/adr/: 0001-svg-semantic-ir.md
examples/: connector-style-ref.dml  line-flip-bool.dml  line-style.dml  text-layout.dml
src/drawingml_svg/: converter.py  coverage.py  ir.py
src/svgraph/: converter.py  core.cljc
test/svgraph/: core_test.clj
tests/: maturity_test.cljs  package_api_smoke.cljs  package_support.cljs  package_svg_smoke.cljs  package_table_smoke.cljs  package_text_smoke.cljs  test_converter.py  test_migration.py  test_svgraph.py
web/: app.ts
